ajout d'un header et du logo MT

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Portfollio</title>
 </head>
 <body>
-    <p> Hello world</p>
-    <p> hello there</p>
+    <header> 
+        <img src="logo1.png" alt="logo de Melanie Taussat">
+    </header>
+    
 </body>
 </html>
