création d'un cadre pour l'a propos

--- a/index.html
+++ b/index.html
@@ -8,9 +8,15 @@
 </head>
 <body>
     <header> 
-        <img src="logo1.png" alt="logo de Melanie Taussat">
-        
+        <img class="logo" src="logo1.png" alt="logo de Melanie Taussat">
     </header>
+
+<div class="cadre"> 
+    <p> Melanie Taussat </p><br> 
+
+</div>
+
     
 </body>
+<script scr="script.js"> </script>
 </html>
