remaniement du header

--- a/index.html
+++ b/index.html
@@ -11,17 +11,23 @@
         <nav>
             <div class="container"> 
             <img class="child1" src="logo1.png" alt="logo de Melanie Taussat"> 
-            <div class="container2"> <img class="child2" src="LogoLK.png" alt="logo de Linkedin">
-            <img class="child3"src="LogoMailG.png" alt="logo d'une enveloppe">
-        </div> </div>
-        </nav> 
-    </header>
+            <div class="about"> <p> About</p></div>
+            </div>
+    </nav> 
+</header>
 
+<div class="container2"> 
+    <img class="child2" src="LogoLK.png" alt="logo de Linkedin">
+    <img class="child3"src="LogoMailG.png" alt="logo d'une enveloppe">
+</div> 
 <div class="cadre"> 
+
+
+
     <h1> Welcome </h1><br> 
     <p> I'm </p>
     <h2> Mélanie Taussat </h2>
-    <p> Full stack Web Developer</p>
+    <h3> Full stack Web Developer</h3>
 
 </div>
 
